...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:scrollbars="none">

                <dev.samadali.zen.stats.YearHeatmapView
                    android:id="@+id/yearHeatmap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </HorizontalScrollView>

            <include
                android:id="@+id/legend"
...
